--- a/alarm.html
+++ b/alarm.html
@@ -33,6 +33,10 @@
     color: #2e7d32;
     transform: scale(1.05);
 }
+
+#mensaje {
+	padding: 15px;
+}
 	</style>
 </head>
 <body onmouseover="Diga()">
