--- a/alarm.html
+++ b/alarm.html
@@ -1,72 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>ALARM</title>
-	<style type="text/css">
-		body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f5;
-}
-
-#escribe {
-    font-size: 3em;
-    color: #333;
-    padding: 20px;
-    border: 3px solid #4CAF50;
-    border-radius: 15px;
-    background-color: #e7ffe7;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    width: fit-content;
-    transition: all 0.3s;
-}
-
-#escribe:hover {
-    background-color: #d4ffd4;
-    color: #2e7d32;
-    transform: scale(1.05);
-}
-
-#mensaje {
-	padding: 15px;
-}
-	</style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ALARM</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body onmouseover="Diga()">
-    <p id="escribe"><script type="text/javascript">
-		function Diga(){
-			var now = new Date();
-			if(now.getSeconds()<10) document.getElementById("escribe").innerHTML = now.getHours() + ":" + now.getMinutes() + ":" + "0" + now.getSeconds();
-			else document.getElementById("escribe").innerHTML = now.getHours() + ":" + now.getMinutes() + ":" + now.getSeconds();
-			console.log("HORA:" + now.getHours() + ":" + now.getMinutes() + ":" + now.getSeconds());
-		}
-		setInterval(Diga, 1000);
-	</script>
-</p>
-	<p id="mensaje">
-		<script type="text/javascript">
-			  function Mensaje() {
-            var now = new Date();
-            var hora = now.getHours();
-            var MSG = "";
-            if (hora >= 19 || hora < 5) {
-                MSG = "BUENAS NOCHES";
-            } else if (hora >= 12 && hora < 19) {
-                MSG = "BUENAS TARDES";
-            } else {
-                MSG = "BUENOS DÍAS";
+    <h1>Reloj Digital</h1>
+    <p id="escribe">
+        <script type="text/javascript">
+            function Diga() {
+                var now = new Date();
+                if (now.getSeconds() < 10) {
+                    document.getElementById("escribe").innerHTML = now.getHours() + ":" + now.getMinutes() + ":0" + now.getSeconds();
+                } else {
+                    document.getElementById("escribe").innerHTML = now.getHours() + ":" + now.getMinutes() + ":" + now.getSeconds();
+                }
+                console.log("HORA:" + now.getHours() + ":" + now.getMinutes() + ":" + now.getSeconds());
             }
-            document.getElementById("mensaje").innerHTML = MSG;
-        }
-			setInterval(Mensaje, 1000);
-		</script>
-	</p>
+            setInterval(Diga, 1000);
+        </script>
+    </p>
+    <p id="mensaje">
+        <script type="text/javascript">
+            function Mensaje() {
+                var now = new Date();
+                var hora = now.getHours();
+                var MSG = "";
+                if (hora >= 19 || hora < 5) {
+                    MSG = "BUENAS NOCHES";
+                } else if (hora >= 12 && hora < 19) {
+                    MSG = "BUENAS TARDES";
+                } else {
+                    MSG = "BUENOS DÍAS";
+                }
+                document.getElementById("mensaje").innerHTML = MSG;
+            }
+            setInterval(Mensaje, 1000);
+        </script>
+    </p>
 </body>
 </html>
